# reddis2

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
dev/: README.md  docker-compose.yml
dev/grafana/provisioning/dashboards/: redis-dashboard.json
dev/prometheus/: prometheus.yml
py_tests/: redis_test.py
src/: cimpl.rs  dict_ops.rs  err.rs  hmap_ops.rs  list_ops.rs  main.rs  memory.rs  numerical_ops.rs  ops.rs  set_ops.rs  sorted_set_ops.rs  stats.rs  stored_value.rs
src/cmd/: mod.rs  parser.rs
