[package]
name = "reddis2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
bytes = "1.11.1"
mio = { version = "1.1.1", features = ["net", "os-poll"] }
nom = "7.1.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tikv-jemallocator = "0.6.1"
tikv-jemalloc-ctl = { version = "0.6.1", features = ["stats"] }
histogram = "0.11.4"
compact_str = "0.9.0"
